--- a/tools/distrib/bazel/BUILD.bazel
+++ b/tools/distrib/bazel/BUILD.bazel
@@ -170,6 +170,22 @@ alias(
     })
 )
 
+alias(
+    name = "bootstrap.exe",
+    actual = select({
+        "@cef//:dbg": "Debug/bootstrap.exe",
+        "//conditions:default": "Release/bootstrap.exe",
+    })
+)
+
+alias(
+    name = "bootstrapc.exe",
+    actual = select({
+        "@cef//:dbg": "Debug/bootstrapc.exe",
+        "//conditions:default": "Release/bootstrapc.exe",
+    })
+)
+
 filegroup(
     name = "sos_opt",
     srcs = ["Release/{}".format(name) for name in LINUX_SOS],
