linux: Fix static TLS relocations (fixes #3803)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -463,12 +463,6 @@ patches = [
     'name': 'linux_assets_path_1936',
   },
   {
-    # Linux: Fix ld.lld: error: relocation R_X86_64_TPOFF32 against
-    # blink::g_thread_specific_ cannot be used with -shared
-    # https://groups.google.com/a/chromium.org/g/blink-dev/c/wx0gZFCY3p4/m/iLBHRi0ZAQAJ
-    'name': 'linux_blink_thread_local',
-  },
-  {
     # Linux: Avoid usage of chrome::FILE_COMPONENT_WIDEVINE_CDM_HINT.
     # https://github.com/chromiumembedded/cef/issues/3149
     'name': 'linux_chrome_widevine_3149',
@@ -762,5 +756,10 @@ patches = [
     # https://github.com/chromiumembedded/cef/issues/3944
     'name': 'tarball_gclient',
     'path': 'third_party/depot_tools'
+  },
+  {
+    # linux: Disable static TLS usage.
+    # https://github.com/chromiumembedded/cef/issues/3803#issuecomment-2980482430
+    'name': 'linux_gwp_asan_3803'
   }
 ]
