vscode: mac: Use ~/.lldbinit to match Chromium docs
Runtime error messages link to the Chromium docs at
https://chromium.googlesource.com/chromium/src/+/main/docs/lldbinit.md

--- a/tools/vscode/launch.json.in
+++ b/tools/vscode/launch.json.in
@@ -33,7 +33,7 @@
         "setupCommands": [
           {
             "description": "Load lldbinit file",
-            "text": "command source ${workspaceFolder}/.lldbinit",
+            "text": "command source ~/.lldbinit",
             "ignoreFailures": false
           }
         ]
