alloy: Fix autofill crash after form submission (fixes #3796)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -761,5 +761,10 @@ patches = [
     # linux: Disable static TLS usage.
     # https://github.com/chromiumembedded/cef/issues/3803#issuecomment-2980482430
     'name': 'linux_gwp_asan_3803'
+  },
+  {
+    # alloy: Fix autofill crash after form submission.
+    # https://github.com/chromiumembedded/cef/issues/3796
+    'name': 'chrome_autofill_bubble_3796'
   }
 ]
