Add option to disable storage notifications (fixes #3966)
Optionally disable the "Free up space to continue" notification.

Configure globally using
`--disable-features=StorageNotificationService` or per-Profile
using the "cef.storage_notification_service_enabled" boolean
preference.

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -677,6 +677,7 @@ source_set("libcef_static") {
     "libcef/browser/prefs/browser_prefs.h",
     "libcef/browser/prefs/pref_helper.cc",
     "libcef/browser/prefs/pref_helper.h",
+    "libcef/browser/prefs/pref_names.h",
     "libcef/browser/prefs/pref_registrar.cc",
     "libcef/browser/prefs/pref_registrar.h",
     "libcef/browser/prefs/renderer_prefs.cc",
