Read src/tarball_args.gn for angle commit details (fixes #3974)
This file will exist when building with a source tarball and
contain GN args that will be merged into the build-specific
args.gn file to configure angle commit details.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -764,5 +764,11 @@ patches = [
     # alloy: Fix autofill crash after form submission.
     # https://github.com/chromiumembedded/cef/issues/3796
     'name': 'chrome_autofill_bubble_3796'
+  },
+  {
+    # Support GN config of angle commit details for use with source tarballs.
+    # https://github.com/chromiumembedded/cef/issues/3974
+    'name': 'angle_commit_config',
+    'path': 'third_party/angle'
   }
 ]
