bootstrap: Use crashpad API directly for LOG_FATAL (fixes #3951)
Additionally use bootstrap[c].exe to set the LOG_FATAL crash key
(via exported SetLogFatalCrashKey) for consistent handling.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -770,5 +770,10 @@ patches = [
     # https://github.com/chromiumembedded/cef/issues/3974
     'name': 'angle_commit_config',
     'path': 'third_party/angle'
+  },
+  {
+    # bootstrap: Use bootstrap[c].exe to set the LOG_FATAL crash key.
+    # https://github.com/chromiumembedded/cef/issues/3951
+    'name': 'base_logging_3951'
   }
 ]
