Reduce JS minimum window size to 52px (see #3714)
Allow JavaScript resize down to kMinWindowSize (52px) which is the
hard-coded minimum height for Document Picture-in-Picture windows.
The minimum size is now the same for both manual and JS resize.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -770,5 +770,11 @@ patches = [
     # bootstrap: Use bootstrap[c].exe to set the LOG_FATAL crash key.
     # https://github.com/chromiumembedded/cef/issues/3951
     'name': 'base_logging_3951'
+  },
+  {
+    # Allow JavaScript resize down to kMinWindowSize which applies for Document
+    # Picture-in-Picture windows.
+    # https://github.com/chromiumembedded/cef/issues/3714
+    'name': 'blink_window_size_3714'
   }
 ]
