--- a/cmake/cef_macros.cmake.in
+++ b/cmake/cef_macros.cmake.in
@@ -203,6 +203,43 @@ endif(OS_LINUX)
 
 if(OS_MAC)
 
+# Copy the CEF framework into the Frameworks directory and create the necessary symlinks.
+# Resulting directory structure is:
+#   Chromium Embedded Framework.framework
+#   ├── Chromium Embedded Framework -> Versions/A/Chromium Embedded Framework
+#   ├── Libraries -> Versions/A/Libraries
+#   ├── Resources -> Versions/A/Resources
+#   └── Versions
+#       ├── A
+#       │   ├── Chromium Embedded Framework
+#       │   ├── Libraries
+#       │   └── Resources
+#       └── Current -> A
+macro(COPY_MAC_FRAMEWORK target binary_path app_path)
+  set(FRAMEWORK_DIR "${app_path}/Contents/Frameworks/Chromium Embedded Framework.framework")
+  set(FRAMEWORK_DIR_A "${FRAMEWORK_DIR}/Versions/A")
+  add_custom_command(
+    TARGET ${target}
+    POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+            "${binary_path}/Chromium Embedded Framework.framework"
+            "${FRAMEWORK_DIR_A}"
+    COMMAND ${CMAKE_COMMAND} -E create_symlink
+            "${FRAMEWORK_DIR_A}/Chromium Embedded Framework"
+            "${FRAMEWORK_DIR}/Chromium Embedded Framework"
+    COMMAND ${CMAKE_COMMAND} -E create_symlink
+            "${FRAMEWORK_DIR_A}/Libraries"
+            "${FRAMEWORK_DIR}/Libraries"
+    COMMAND ${CMAKE_COMMAND} -E create_symlink
+            "${FRAMEWORK_DIR_A}/Resources"
+            "${FRAMEWORK_DIR}/Resources"
+    COMMAND ${CMAKE_COMMAND} -E create_symlink
+            "${FRAMEWORK_DIR_A}"
+            "${FRAMEWORK_DIR}/Versions/Current"
+    VERBATIM
+    )
+endmacro()
+
 # Manually process and copy over resource files.
 macro(COPY_MAC_RESOURCES resource_list prefix_list target source_dir app_path)
   foreach(FILENAME ${resource_list})
