osr: Avoid crash in ShowCertificateViewerForClientAuth (fixes #3989)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -291,6 +291,11 @@ patches = [
     'name': 'chrome_browser_dialogs_widget',
   },
   {
+    # osr: Avoid crash in ShowCertificateViewerForClientAuth
+    # https://github.com/chromiumembedded/cef/issues/3989
+    'name': 'chrome_browser_dialogs_misc'
+  },
+  {
     # chrome: Support custom DownloadManagerDelegate handling.
     # https://github.com/chromiumembedded/cef/issues/3681
     #
