Avoid crash showing MV2 disabled dialog with hidden toolbar

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -293,6 +293,9 @@ patches = [
   {
     # osr: Avoid crash in ShowCertificateViewerForClientAuth
     # https://github.com/chromiumembedded/cef/issues/3989
+    #
+    # Avoid crash showing MV2 disabled dialog with hidden toolbar.
+    # Related to https://crrev.com/708304a827
     'name': 'chrome_browser_dialogs_misc'
   },
   {
