win: Fix nullptr crash in AXPlatformNodeWin::accLocation
This is a speculative fix for the following crash signature
from M139 Windows Store app (not captured by Crashpad):

libcef.dll!base::ImmediateCrash() Line 186	C++
libcef.dll!logging::CheckFailure() Line 258	C++
libcef.dll!logging::CheckDeref(ui::AXPlatformNodeDelegate * ptr, const char * message, const base::Location & location) Line 46	C++
libcef.dll!ui::AXPlatformNodeBase::GetDelegate() Line 504	C++
libcef.dll!ui::AXPlatformNodeWin::accLocation(long * physical_pixel_left, long * physical_pixel_top, long * width, long * height, tagVARIANT var_id) Line 1648	C++
[Frames may be missing, no binary loaded for rpcrt4.dll]

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -784,5 +784,9 @@ patches = [
     # Picture-in-Picture windows.
     # https://github.com/chromiumembedded/cef/issues/3714
     'name': 'blink_window_size_3714'
+  },
+  {
+    # win: Fix nullptr crash in AXPlatformNodeWin::accLocation().
+    'name': 'win_ax_platform_node'
   }
 ]
