linux: Fix undefined symbol: MigratableSyncServiceCoordinatorImpl

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -200,6 +200,10 @@ patches = [
   },
   {
     # Support CEF changes in chrome/browser.
+    #
+    # linux: Fix undefined symbol: MigratableSyncServiceCoordinatorImpl.
+    # Partially reverts https://crrev.com/441b251b53 which adds an unused/broken
+    # configuration to the build.
     'name': 'chrome_browser',
   },
   {
