claude: Add file movement detection for patch fixing workflow
This significantly improves the reliability and efficiency of the
patch update workflow, especially when Chromium refactors code into
new directory structures.

--- a/.gitignore.in
+++ b/.gitignore.in
@@ -53,3 +53,6 @@ Thumbs.db
 # CEF generated files
 .ccls-cache/
 /cef_api_untracked.json
+/tools/claude/patch_analysis.txt
+/tools/claude/patch_output.txt
+/tools/claude/build_output.txt
