--- a/CMakeLists.txt.in
+++ b/CMakeLists.txt.in
@@ -223,6 +223,7 @@ add_subdirectory(${CEF_LIBCEF_DLL_WRAPPER_PATH} libcef_dll_wrapper)
 # TODO: Change these lines to match your project target when you copy this file.
 if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tests")
   add_subdirectory(tests/cefsimple)
+  add_subdirectory(tests/cefsimple_capi)
   add_subdirectory(tests/gtest)
   add_subdirectory(tests/ceftests)
 endif()
