win: Fix "Symbols not available" stack traces
Call EnableInProcessStackDumping for all processes during Chromium
initialization. This is necessary after https://crrev.com/0bbe87d347
to fix "Symbols not available" output when printing stack traces in
the main process. For comparison, Chromium test code calls this
explicitly from TestSuite::Initialize. This change only impacts
non-Official builds.

Note that there are also timing considerations with GTest calling
absl::InitializeSymbolizer. That call must occur before the
Chromium call to EnableInProcessStackDumping.

See https://crbug.com/462160529 for additional background.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -166,6 +166,13 @@ patches = [
     # Fix DiscardableSharedMemoryManager crash on shutdown with multi-threaded
     # message loop.
     # https://github.com/chromiumembedded/cef/issues/2798
+    #
+    # win: Call EnableInProcessStackDumping for all processes during Chromium
+    # initialization. This is necessary after https://crrev.com/0bbe87d347 to
+    # fix "Symbols not available" output when printing stack traces in the main
+    # process. For comparison, Chromium test code calls this explicitly from
+    # TestSuite::Initialize. This change only impacts non-Official builds.
+    # https://issues.chromium.org/issues/462160529
     'name': 'content_main_654986',
   },
   {
