Add configuration to bypass user activation for Document PiP

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -69,6 +69,9 @@ patches = [
   {
     # Enable moveTo()/moveBy() for Document picture-in-picture popups.
     # https://github.com/chromiumembedded/cef/issues/3714
+    #
+    # Add configuration to bypass user activation requirement when opening
+    # Document picture-in-picture windows.
     'name': 'webkit_move_pip',
   },
   {
