--- a/tests/cefclient/win/cefclient.rc
+++ b/tests/cefclient/win/cefclient.rc
@@ -47,6 +47,7 @@ IDS_PDF_HTML BINARY "tests\\shared\\resources\\pdf.html"
 IDS_PDF_PDF BINARY "tests\\shared\\resources\\pdf.pdf"
 IDS_PERFORMANCE_HTML BINARY "tests\\cefclient\\resources\\performance.html"
 IDS_PERFORMANCE2_HTML BINARY "tests\\cefclient\\resources\\performance2.html"
+IDS_PIP_HTML BINARY "tests\\cefclient\\resources\\pip.html"
 IDS_PREFERENCES_HTML BINARY "tests\\cefclient\\resources\\preferences.html"
 IDS_RESPONSE_FILTER_HTML BINARY "tests\\cefclient\\resources\\response_filter.html"
 IDS_SERVER_HTML BINARY "tests\\cefclient\\resources\\server.html"
