Update to Chromium version 144.0.7559.31

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -808,5 +808,10 @@ patches = [
     # Cherry-pick of https://crrev.com/16a8078b66.
     # https://issues.chromium.org/issues/450464276
     'name': 'net_connection_drp_450464276'
+  },
+  {
+    # Gate glic deps behind the enable flag
+    # Cherry-pick of https://crrev.com/e4f39412ee.
+    'name': 'chrome_toasts_7244350'
   }
 ]
